--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "license": "BSD-3-Clause",
   "scripts": {
     "bootstrap": "npm install && ./scripts/bootstrap.sh",
-    "dev": "polyserve --npm --module-resolution=node --open-path=demos/index.html",
+    "dev": "polyserve --npm --module-resolution=node --open-path=demos/index.html --hostname $npm_package_config_http_server_host --port $npm_package_config_http_server_port",
     "publish": "npx lerna publish"
+  },
+  "config": {
+    "http-server": {
+      "host": "0.0.0.0",
+      "port": "8081"
+    }
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.2.7",
