--- a/packages/dia-livecode/package.json
+++ b/packages/dia-livecode/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@petitatelier/dia-glitch",
+  "name": "@petitatelier/dia-livecode",
   "version": "0.0.3",
   "description": "",
   "author": "Olivier & Yves Lange",
   "license": "BSD-3-Clause",
-  "main": "dia-glitch.js",
+  "main": "dia-livecode.js",
   "scripts": {},
   "dependencies": {
     "@petitatelier/slideshow": "^0.0.3",
@@ -26,7 +26,7 @@
   "bugs": {
     "url": "https://github.com/petitatelier/slideshow/issues"
   },
-  "homepage": "https://github.com/petitatelier/slideshow/tree/master/packages/dia-glitch#readme",
+  "homepage": "https://github.com/petitatelier/slideshow/tree/master/packages/dia-livecode#readme",
   "publishConfig": {
     "access": "public"
   }
