--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Olivier & Yves Lange",
   "license": "BSD-3-Clause",
   "scripts": {
-    "bootstrap": "npm install && ./scripts/bootstrap.sh",
+    "bootstrap": "npm install && ./scripts/bootstrap.sh && npm run build",
+    "build": "npx lerna run build",
     "dev": "polyserve --npm --module-resolution=node --open-path=demos/index.html --hostname $npm_package_config_http_server_host --port $npm_package_config_http_server_port",
     "watch": "npm run dev & browser-sync http://$npm_package_config_http_server_host:$npm_package_config_http_server_port --no-open --files \"./packages/**/*,./demos/**/*\"",
     "publish": "npx lerna publish"
